@@ -1,0 +1,7 @@
+backup_migrate.backup_migrate_source.FileDirectory:
+  type: mapping
+  label: 'Backup Migrate FileDirectory Settings'
+  mapping:
+    directory:
+      type: string
+      label: 'Directory'
